# LLMOps_Study

./: README.md  pyproject.toml
01_beginner/: 02_langchain_basics.ipynb
01_beginner/.ipynb_checkpoints/: 00_setup-checkpoint.ipynb  01_llm_basics-checkpoint.ipynb
06_examples/: prompts.py
LLMOps/: 00_Basic_concepts.ipynb  README.md
LLMOps-Langfuse/: 00_Basic_concepts.ipynb
book/: main.typ  template.typ
book/assets/diagrams/: durable_resume_flow.mmd  framework_selection_tree.mmd  guardrail_insertion_points.mmd  handoffs_state_machine.mmd  production_lifecycle_flow.mmd  rag_end_to_end.mmd  rag_pipeline_overview.mmd  sql_query_review_flow.mmd  voice_streaming_pipeline.mmd
book/chapters/: appendix_glossary.typ
book/chapters/part1/: ch06.typ
book/chapters/part2/: ch01.typ  ch06.typ  ch12.typ  ch13.typ
book/chapters/part3/: ch01.typ  ch04.typ  ch11.typ  ch12.typ  ch13.typ
book/chapters/part4/: ch01.typ  ch04.typ  ch05.typ  ch06.typ  ch07.typ  ch10.typ
book/chapters/part5/: ch01.typ  ch02.typ  ch03.typ  ch04.typ  ch05.typ  ch06.typ  ch08.typ  ch09.typ
docs/: 2026-03-11_framework-selection-research.md  2026-03-11_glossary_prep.md  2026-03-11_pdf_page_review.md
